# Profiles

backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  model.py  router.py  service.py
backend/app/model/: __init__.py  person.py  users.py
backend/app/repo/: person.py  role.py  users.py
backend/app/router/: users.py
backend/app/service/: auth_service.py
frontend/: package.json
frontend/src/: App.js  Home.js  index.js
frontend/src/form/: Forgot.js  Login.js  Register.js
