[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Anand <ravichandrananand50@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "0.30.1"
fastapi = "0.111.1"
SQLAlchemy = "2.0.31"
sqlmodel = "0.0.19"
asyncpg = "0.29.0"
psycopg2 = "^2.9.9"
pydantic = "2.8.2"
alembic = "1.13.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start= "app.main:start"